update: тестирование картинок для сраниц, правка стилей

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -24,7 +24,7 @@
           <h3 class="about-body__title">О проекте и обо мне</h3>
           <div class="about-body__descr about-body__descr--column">
             <!-- /.about__img -->
-            <p class="about-body__text">Целью данного проекта является публикация информации о моей работе в Сланцевском доме творчества. Здесь вы найдете последние новости, а я постараюсь во время обновлять страницу.</p>
+            <p class="about-body__text">Целью данного проекта является публикация информации о моей работе в Сланцевском доме творчества. Здесь вы найдете последние новости.</p>
             <div class="about__img">
               <img src="./img/photo/about-oksana1.jpg" alt="Фото Оксаны с обучающимися"></div>
             <p class="about-body__text">Я работаю педагогом дополнительного образования с сентября 2016г. С этого момента я начала принимать участия в разнообразных мероприятиях, конкурсах и соревнованиях.
