--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,7 +13,7 @@
   //= template/hidden.html
 
   <div id="grid">
-    //= template/header-index.html
+    //= template/header.html
     <main class="main" role="main">
       <h2 class="main-title">Что нового?</h2>
       <div class="cards">
@@ -26,14 +26,14 @@
             <div class="card-body__descr">
               <div class="card__img">
                 <!-- <div class="card__img d-none d-sm-block d-md-none d-lg-block"> -->
-                <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+                <img src="./img/logo/Kingisepp_cit.png" alt="Логотип соревнования"></div>
               <!-- /.card__img -->
               <p class="card-body__text">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
                 Ивангорода,
                 Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
             </div>
             <!-- /.card__descr -->
-            <div class="card__carousel">
+            <div class="slick-carousel d-none">
               <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
           </div>
           <!-- /.card-body -->
@@ -53,12 +53,12 @@
             <h3 class="card-body__title">Открытые соревнования по робототехнике Всеволожск</h3>
             <div class="card-body__descr">
               <div class="card__img">
-                <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+                <img src="./img/logo/Vsevolojsk_logo.png" alt="Логотип соревнования"></div>
               <!-- /.card__img -->
               <p class="card-body__text">3 ноября 2019 года прошли Открытые соревнования по робототехнике Всеволожского района. Наши обучающиеся приняли участие в категории "Интеллектуальное сумо". </p>
             </div>
             <!-- /.card__descr -->
-            <div class="card__carousel">
+            <div class="slick-carousel d-none">
               <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
           </div>
           <!-- /.card-body -->
@@ -80,7 +80,7 @@
             <h3 class="card-body__title">Областной сбор "Юный техник".</h3>
             <div class="card-body__descr">
               <div class="card__img">
-                <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+                <img src="./img/logo/Pervomayskoe_logo.png" alt="Логотип соревнования"></div>
               <!-- /.card__img -->
               <p class="card-body__text">23.10.2019 обучающиеся Дома творчества участвовали в областном сборе "Юный техник", который проходил в Первомайском центре образования в Выборгском районе. Для ребят провели экскурсии по самому центру и его
                 музею, а
@@ -88,7 +88,7 @@
                 провели 3 увлекательных мастер-класса</p>
             </div>
             <!-- /.card__descr -->
-            <div class="card__carousel">
+            <div class="slick-carousel d-none">
               <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
           </div>
           <!-- /.card-body -->
@@ -109,7 +109,7 @@
           <div class="card-body">
             <h3 class="card-body__title">III соревнования Роботы вперед</h3>
             <div class="card-body__descr">
-              <div class="card__img">
+              <div class="card__img d-none">
                 <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
               <!-- /.card__img -->
               <p class="card-body__text">19 мая 2019 года в Доме творчества на базе ул.Грибоедова д.8 прошли lll Соревнования «Роботы вперёд». В данном мероприятии приняли участие обучающиеся разных учреждений из г.Кингисепп, г.Ивангорода,
@@ -117,8 +117,14 @@
                 г.Сланцы и Волосовского района.</p>
             </div>
             <!-- /.card__descr -->
-            <div class="card__carousel">
-              <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+            <div class="slick-carousel slick-carousel--card">
+              <div class="carousel__img"><img src="./img/photo/robfor_1.jpg" alt="Фото с соревнований Роботы вперед"></div>
+              <div class="carousel__img"><img src="./img/photo/robfor_2.jpg" alt="Фото с соревнований Роботы вперед"></div>
+              <div class="carousel__img"><img src="./img/photo/robfor_3.jpg" alt="Фото с соревнований Роботы вперед"></div>
+              <div class="carousel__img"><img src="./img/photo/robfor_4.jpg" alt="Фото с соревнований Роботы вперед"></div>
+              <div class="carousel__img"><img src="./img/photo/robfor_5.jpg" alt="Фото с соревнований Роботы вперед"></div>
+              <div class="carousel__img"><img src="./img/photo/robfor_6.jpg" alt="Фото с соревнований Роботы вперед"></div>
+            </div>
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
