update: обновил структура для стилей и добавил ссылку на старый сайт

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -35,7 +35,8 @@
             </div>
             <p class="about-body__text">Мне интересно работать с учащимися и проводить с ними время, участвовать в соревнованиях и конкурсах. И это здорово, потому что я этим зарабатываю на жизнь.
             </p>
-
+            <p class="about-body__text">Представлена обновленная версия сайта, старая версия доступна <a href="./ver.1/index.html" class="link">здесь</a>.
+            </p>
           </div>
           <!-- /.about__descr -->
 
@@ -43,6 +44,7 @@
         <!-- /.about-body -->
         <footer class="about-footer">
           <a href="./index.html" class="link about-footer__link">Вернуться назад ...</a>
+
         </footer>
         <!-- /.about__links links -->
       </article>
