feat: add article from Kolpino

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,37 @@
       <div class="cards">
         <article class="card">
           <header class="card-header">
+            <p class="card-header__title">01 февраля, 2020 Колпино</p>
+          </header>
+          <div class="card-body">
+            <h3 class="card-body__title">«ТехноКолпино-2020»</h3>
+            <div class="card-body__descr">
+              <div class="card__img">
+                <!-- <div class="card__img d-none d-sm-block d-md-none d-lg-block"> -->
+                <img src="./img/logo/logoCDUTTKlp.png" alt="Логотип соревнования"></div>
+              <!-- /.card__img -->
+              <p class="card-body__text">01 февраля 2020 года обучающиеся Кирилл Ф., Дарья Ф., Тимофей Е. приняли участие в Открытых соревнованиях по робототехнике на кубок главы администрации Колпинского района г. Санкт-Петербурга
+                «ТехноКолпино-2020». <br>
+                Ребята приняли участие в категории «Интеллектуальное сумо 15х15».
+                В итоге Тимофей занял 1 место, Кирилл – 3 место. <br>
+                Призеры соревнований были награждены дипломами и медалями.
+                Молодцы ребята!!!</p>
+            </div>
+            <!-- /.card__descr -->
+            <div class="slick-carousel d-none">
+              <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          </div>
+          <!-- /.card-body -->
+          <footer class="card-footer">
+            <a href="https://youtu.be/6YjMv7a7ys4" class="link card-footer__link card-footer__link--youtube" target="_blank">
+              <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
+              Смотреть на канале</a>
+            <a href="#" class="link card-footer__link d-none" target="_blank">Читать далее ...</a>
+          </footer>
+          <!-- /.card__links links -->
+        </article>
+        <article class="card">
+          <header class="card-header">
             <p class="card-header__title">09 ноября, 2019 Кингисепп</p>
           </header>
           <div class="card-body">
