fix: add links noopener

--- a/src/html/archiv.html
+++ b/src/html/archiv.html
@@ -38,10 +38,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/yjMEYsY8D0s" class="link card-footer__link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/yjMEYsY8D0s" class="link card-footer__link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/domtvor1?w=wall-75889999_263" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/domtvor1?w=wall-75889999_263" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -64,10 +64,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/mPIIe-8JGMQ" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/mPIIe-8JGMQ" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/domtvor1?w=wall-75889999_248" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/domtvor1?w=wall-75889999_248" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -92,10 +92,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/NETD_SNGYi8" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/NETD_SNGYi8" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/domtvor1?w=wall-75889999_204" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/domtvor1?w=wall-75889999_204" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -120,7 +120,7 @@
             </div>
             <!-- /.card-body -->
             <footer class="card-footer">
-              <a href="https://youtu.be/xYwQGT9wzOs" class="link card-footer__link--youtube" target="_blank">
+              <a href="https://youtu.be/xYwQGT9wzOs" class="link card-footer__link--youtube" target="_blank" rel="noopener">
                 <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
                 Смотреть на канале</a>
               <a href="./blog/robotron2018-blog.html" class="link card-footer__link">Читать далее ...</a>
@@ -147,10 +147,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/415UINv61CQ" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/415UINv61CQ" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/domtvor1?w=wall-75889999_198" class="link card-footer__link link-none" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/domtvor1?w=wall-75889999_198" class="link card-footer__link link-none" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -173,10 +173,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/pEH_poE5ltU" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/pEH_poE5ltU" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/domtvor1?w=wall-75889999_198" class="link card-footer__link link-none" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/domtvor1?w=wall-75889999_198" class="link card-footer__link link-none" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
