--- a/src/html/index.html
+++ b/src/html/index.html
@@ -41,7 +41,7 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/6YjMv7a7ys4" class="link card-footer__link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/6YjMv7a7ys4" class="link card-footer__link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
             <a href="#" class="link card-footer__link d-none" target="_blank">Читать далее ...</a>
@@ -69,10 +69,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/xANEOrfSNQA" class="link card-footer__link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/xANEOrfSNQA" class="link card-footer__link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="http://kingisepp.ru/news/block-5543/" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="http://kingisepp.ru/news/block-5543/" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -94,10 +94,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/Ufip2-paMz8" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/Ufip2-paMz8" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/wall-75889999_337" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/wall-75889999_337" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -124,10 +124,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/2ilExnq7F7Q" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/2ilExnq7F7Q" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="http://pervomayco.ru/about/news/2019/543/" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="http://pervomayco.ru/about/news/2019/543/" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
@@ -159,10 +159,10 @@
           </div>
           <!-- /.card-body -->
           <footer class="card-footer">
-            <a href="https://youtu.be/GBCS0qtjDgU" class="link card-footer__link--youtube" target="_blank">
+            <a href="https://youtu.be/GBCS0qtjDgU" class="link card-footer__link--youtube" target="_blank" rel="noopener">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="https://vk.com/wall-75889999_319" class="link card-footer__link" target="_blank">Читать далее ...</a>
+            <a href="https://vk.com/wall-75889999_319" class="link card-footer__link" target="_blank" rel="noopener noreferrer">Читать далее ...</a>
           </footer>
           <!-- /.card__links links -->
         </article>
