feat: update open graph for image title etc

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -15,7 +15,7 @@
   <div id="grid">
     //= template/header.html
 
-    <main class="main" role="main">
+    <main class="main">
       <article class="about">
         <header class="about-header">
           <p class="about-header__title">01 февраля, 2020</p>
