--- a/src/html/archiv.html
+++ b/src/html/archiv.html
@@ -15,7 +15,7 @@
 
   <div id="grid">
     //= template/header.html
-    <main class="main" role="main">
+    <main class="main">
       <h2 class="main-title">Архив новостей</h2>
       <div class="cards">
         <article class="card">
